he logic of the program has been completely changed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,8 @@ set(PROJECT_SOURCES
         mainwindow.ui
         matrix.cpp
         matrix.h
+        Linker.cpp
+        Linker.h
         ${TS_FILES}
 )
 
